[package]
edition = "2018"
name = "adnl"
version = "0.3.0"
description = "ADNL library"

[dependencies]
aes = { version = "0.7", features = ["ctr"] }
cipher = "0.3"
arrayref = "0.3"
base64 = "0.13"
curve25519-dalek = "3.0"
ed25519 = "1.0"
ed25519-dalek = "1.0"
failure = "0.1"
log = "0.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha2 = "0.9"
socket2 = "0.4"
tokio = { version = "1", features = ["io-util", "net"] }
tokio-io-timeout = "1.1"
x25519-dalek = "1"

ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", branch = "original", package = "ton_api" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }

[features]
default = ["client"]
trace = []
client = []
server = ["ton_api/ton_api"]
